# mayfly-server

./: .gitignore  Cargo.toml  README.md  config.example.yaml  config.yaml
docs/: keycloak.md  oidc.md
examples/: gen_test_ca.rs  issue_cert.rs
src/: clock.rs  config.rs  dev_certs.rs  environment.rs  errors.rs  golden_vectors.rs  lib.rs  logging.rs  main.rs  request_id.rs  secret.rs  server.rs  state.rs  tls.rs
src/agentauth/: middleware.rs  mod.rs  nonce.rs  signing.rs
src/audit/: context.rs  hash.rs  mod.rs  model.rs  query.rs  repository.rs  service.rs  verifier.rs
src/auth/: github.rs  keycloak.rs  mod.rs  provider.rs  registry.rs
src/auth/keycloak/: claims.rs  config.rs  mod.rs  oidc.rs  verify.rs
src/authz/: errors.rs  mod.rs  models.rs  service.rs
src/bundle/: canonical.rs  jitter.rs  mod.rs  models.rs  service.rs  signer.rs
src/ca/: errors.rs  mod.rs  models.rs  service.rs
src/cabundle/: mod.rs  models.rs  repository.rs  service.rs
src/db/: mod.rs
src/db/migrations/: 001_audit_log.sql  002_machines.sql  003_machine_protocol.sql  004_ca_bundle.sql  005_ca_management.sql  006_ca_retirement.sql  007_audit_indexes.sql
src/github/: client.rs  errors.rs  mod.rs  models.rs
src/machines/: admin.rs  errors.rs  mod.rs  models.rs  protocol.rs  repository.rs  service.rs  token.rs  validation.rs
src/ops/: metrics.rs  mod.rs
src/rollout/: mod.rs  models.rs  service.rs
src/routes/: admin.rs  admin_machines.rs  agent.rs  auth.rs  ca_bundle.rs  certificates.rs  health.rs  machines.rs  mod.rs  ops.rs  ready.rs  rollout.rs  servers.rs
testdata/: ca_test  ca_test.pub
tests/: admin_ca_integration.rs  admin_enrollment_token_integration.rs  admin_machines_integration.rs  admin_ops_integration.rs  admin_rollout_integration.rs  agent_protocol_integration.rs  audit_integration.rs  auth_integration.rs  bundle_integration.rs  ca_manager_integration.rs  certificates_integration.rs  enrollment_integration.rs  keycloak_integration.rs  server_integration.rs
tests/vectors/: protocol-vectors.json
